--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "سورس ميوزك جيبثون",
+    "name": "سورس ميوزك ابن الدورة ",
     "description": "اهلا بك في تنصيب ميوزك ابن الدورة مجانا @x02x2",
     "logo": "https://l.top4top.io/p_2363dcjiw1.jpg",
     "keywords": [
@@ -45,9 +45,9 @@
     "buildpacks": [
         {
             "url": "heroku/python"
-        },
+        },https://github.com/rida7712/heroku-buildpack-ffmpeg-latest
         {
-            "urlk": "https://github.com/rida7712/heroku-buildpack-ffmpeg-latest"
+            "urlk": "https://github.com/rida7712/jed/heroku-buildpack-ffmpeg-latest"
         }
     ],
     "formation": {
